--- a/ExamPractice/Week82023.MVC/Views/ClubEvents/Index.cshtml
+++ b/ExamPractice/Week82023.MVC/Views/ClubEvents/Index.cshtml
@@ -21,10 +21,16 @@
             })
             @Html.ValidationMessageFor(model => model.ClubId)
         </div>
+        @if (Model.clubEvents != null)
+        {
+            @Html.PartialAsync("_ClubEvents", Model.clubEvents.ToList())
+        }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Show Events" class="btn btn-default"/>
             </div>
         </div>
+        
     </div>
+    
 }
