--- a/ExamPractice/Week82023.MVC/Views/Shared/_Layout.cshtml
+++ b/ExamPractice/Week82023.MVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ClubEvents" asp-action="AllClubDetails">Club Events</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ClubEvents" asp-action="Index">Club Events Partial</a>
+                        </li>
                     </ul>
                 </div>
             </div>
